# ogham

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
crates/ogham-cli/: Cargo.toml
crates/ogham-cli/src/: cli.rs  main.rs
crates/ogham-cli/src/cmd/: breaking.rs  check.rs  dump.rs  generate.rs  get.rs  init.rs  install.rs  mod.rs  proto.rs  serve.rs  update.rs  vendor.rs
crates/ogham-compiler/: Cargo.toml
crates/ogham-compiler/src/: ast.rs  breaking.rs  diagnostics.rs  hir.rs  index.rs  lexer.rs  lib.rs  lower.rs  manifest.rs  parser.rs  pipeline.rs  resolve.rs  syntax_kind.rs
crates/ogham-core/: Cargo.toml
crates/ogham-core/src/: lib.rs
crates/ogham-gen-proto/: Cargo.toml
crates/ogham-gen-proto/src/: main.rs
crates/ogham-lsp/: Cargo.toml
crates/ogham-lsp/src/: lib.rs  main.rs
crates/ogham-proto/: Cargo.toml
crates/ogham-proto/src/: lib.rs
crates/ogham-proto/src/ogham/: ogham.rs  ogham.serde.rs  ogham.tonic.rs
crates/ogham-proto/src/ogham/common/: ogham.common.rs  ogham.common.serde.rs
crates/ogham-proto/src/ogham/compiler/: ogham.compiler.rs  ogham.compiler.serde.rs  ogham.compiler.tonic.rs
crates/ogham-proto/src/ogham/ir/: ogham.ir.rs  ogham.ir.serde.rs
crates/oghamgen/: Cargo.toml
crates/oghamgen/src/: codegen.rs  lib.rs  runner.rs
docs/: repository.md
docs/adr/: cmd.md  compatibility.md  language.md  package.md  plugin_sdk.md  validation.md  wire.md
docs/adr/syntax/: anotations.ogham  contract.ogham  grammar.ebnf  library.ogham  models.ogham  projections.ogham  syntax.ogham
examples/golden/: ir.json
examples/store/: ogham.gen.yaml  ogham.mod.yaml
examples/store/schemas/: api.ogham  common.ogham  order.ogham  product.ogham  user.ogham
proto/: easyp.yaml
proto/assets/: Cargo.toml.tmpl
proto/ogham/: test.proto
proto/ogham/common/: source.proto
proto/ogham/compiler/: request.proto
proto/ogham/ir/: types.proto
