[workspace]
members = [
    "crates/ogham-cli",
    "crates/ogham-compiler",
    "crates/ogham-core",
    "crates/ogham-lsp",
    "crates/ogham-proto",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oghamlang/ogham"
homepage = "https://github.com/oghamlang/ogham"
authors = ["Ogham Contributors"]
rust-version = "1.75"
