[package]
name = "ogham-cli"
description = "Ogham schema language CLI — compiler, package manager, and code generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["ogham", "schema", "cli", "compiler", "codegen"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
