[package]
name = "ogham-cli"
description = "Ogham schema language CLI — compiler, package manager, and code generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["ogham", "schema", "cli", "compiler", "codegen"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ogham"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ogham-compiler = { path = "../ogham-compiler" }
ogham-proto = { path = "../ogham-proto" }
prost = { version = "0.14", features = ["derive"] }
tonic = { version = "0.14", features = ["transport"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde_json = "1.0.149"
