[package]
name = "ogham-compiler"
description = "Ogham schema language compiler — lexer, parser, type checker, and AST"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["ogham", "schema", "compiler", "parser", "lexer"]
categories = ["compilers", "parser-implementations"]

[dependencies]
logos = "0.16"
rowan = "0.15"
