[package]
name = "ogham-compiler"
description = "Ogham schema language compiler — lexer, parser, type checker, and AST"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["ogham", "schema", "compiler", "parser", "lexer"]
categories = ["compilers", "parser-implementations"]

[dependencies]
codespan-reporting = "0.13.1"
la-arena = "0.3.1"
logos = "0.16"
ogham-proto = { version = "0.1.0", path = "../ogham-proto" }
rowan = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
string-interner = "0.19.0"
