[package]
name = "ogham-core"
description = "Ogham schema language core — shared types and utilities"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["ogham", "schema", "core"]
categories = ["data-structures"]

[dependencies]
