[package]
name = "ogham-lsp"
description = "Ogham schema language LSP server — diagnostics, completion, hover, go-to-definition"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["ogham", "schema", "lsp", "language-server"]
categories = ["development-tools"]

[dependencies]
